fix(inline-edit): aligned vertical paddings (#DS-4656)

--- a/packages/components/inline-edit/inline-edit-tokens.scss
+++ b/packages/components/inline-edit/inline-edit-tokens.scss
@@ -2,7 +2,7 @@
     --kbq-inline-edit-background: transparent;
     --kbq-inline-edit-height: var(--kbq-size-3xl);
     --kbq-inline-edit-padding-horizontal: var(--kbq-size-s);
-    --kbq-inline-edit-padding-vertical: 5px;
+    --kbq-inline-edit-padding-vertical: var(--kbq-size-xs);
     --kbq-inline-edit-panel-shadow: var(--kbq-shadow-popup);
     --kbq-inline-edit-label-color: var(--kbq-foreground-contrast-secondary);
 }
